--- a/Alphabetizer/index.html
+++ b/Alphabetizer/index.html
@@ -11,8 +11,7 @@
     <script src="javascript.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="theme.css" rel="stylesheet">
 
   </head>
